@@ -18,8 +18,8 @@ on accessing the values of these variables.  The optional -cache
 seconds argument specifies the time to cache the results of
 execution.  All output generated by any scripts and included ADP's
 are saved for subsequent requests unless an included ADP has a
--nocache option.  The use of -cache and -nocache
-can be used to increase performance of ADP used to generated a mix
+-nocache option.  The use of -cache and -nocache can be used to 
+increase performance of ADP used to generated a mix
 of personalized, non-cacheable, content and shared content which
 changes more slowly.  Under high load, the performance improvement
 can be substaintial, especially in cases where the cached content
